# tick

./: GEMINI.md  pyproject.toml
agentic-EARS/: GEMINI.md  Workflow-Master-Reference.md  agents.md  architect-agent.md  artifacts.md  charter-agent.md  hierarchy.md  interviews.md  planning-agent.md  project-prompts.md  sldc.md  structured-outputs.md  system-prompts.md  tasks.md
ears-go/: artifacts.go  go.mod  go.sum  main.go
termite/: GEMINI.md  README.md  pyproject.toml
termite/termite/shared/: run_tui.py
termite/termite/shared/utils/: fix_imports.py
tick/: __main__.py
tick/termite/: __main__.py  termite.py
tick/termite/dtos/: __init__.py
tick/termite/shared/: __init__.py  run_tui.py
tick/termite/shared/utils/: __init__.py  fix_imports.py  python_exe.py  run_pty.py
tick/termite/tools/: __init__.py  build_tui.py  design_tui.py  fix_errors.py  refine.py
